Fixed spacing

--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -15,7 +15,6 @@
     justify-content: center;
     flex-basis: 95%;
     max-width: 1920px;
-    padding-top: 15px;
 }
 
 .gridColumn {
@@ -24,7 +23,7 @@
 }
 
 .gridColumn img {
-    margin-top: 8px;
+    margin-bottom: 8px;
     vertical-align: middle;
     width: 100%;
 }
